Revert "Revert "Merge branch 'Fixing_Archers'""
This reverts commit 8dd02e1346b8f4e54cd2a6d128faded21e8746d0.

--- a/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
+++ b/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
@@ -161,6 +161,7 @@
       <Filter>Projectiles</Filter>
     </ClCompile>
     <ClCompile Include="Block.cpp">
+    <ClCompile Include="ArcherArrow.cpp">
       <Filter>Projectiles</Filter>
     </ClCompile>
   </ItemGroup>
@@ -343,6 +344,7 @@
       <Filter>Projectiles</Filter>
     </ClInclude>
     <ClInclude Include="Block.h">
+    <ClInclude Include="ArcherArrow.h">
       <Filter>Projectiles</Filter>
     </ClInclude>
   </ItemGroup>
