--- a/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
+++ b/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
@@ -108,9 +108,6 @@
     <ClCompile Include="DmgBallItem.cpp">
       <Filter>Items</Filter>
     </ClCompile>
-    <ClCompile Include="ItemContainer.cpp">
-      <Filter>Items</Filter>
-    </ClCompile>
     <ClCompile Include="WCItem.cpp">
       <Filter>Items</Filter>
     </ClCompile>
@@ -163,8 +160,11 @@
     <ClCompile Include="EnemyEntity.cpp">
       <Filter>Entities\Dynamic Entites\Enemies</Filter>
     </ClCompile>
+    <ClCompile Include="ItemContainer.cpp">
+      <Filter>GUI</Filter>
+    </ClCompile>
     <ClCompile Include="Stat.cpp">
-      <Filter>Entities\Dynamic Entites\Player</Filter>
+      <Filter>GUI</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -290,9 +290,6 @@
     <ClInclude Include="DMGBallItem.h">
       <Filter>Items</Filter>
     </ClInclude>
-    <ClInclude Include="ItemContainer.h">
-      <Filter>Items</Filter>
-    </ClInclude>
     <ClInclude Include="WCItem.h">
       <Filter>Items</Filter>
     </ClInclude>
@@ -350,8 +347,11 @@
     <ClInclude Include="EnemyEntity.h">
       <Filter>Entities\Dynamic Entites\Enemies</Filter>
     </ClInclude>
+    <ClInclude Include="ItemContainer.h">
+      <Filter>GUI</Filter>
+    </ClInclude>
     <ClInclude Include="Stat.h">
-      <Filter>Entities\Dynamic Entites\Player</Filter>
+      <Filter>GUI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
