--- a/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
+++ b/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
@@ -169,6 +169,9 @@
     <ClCompile Include="FreezeBallItem.cpp">
       <Filter>Items</Filter>
     </ClCompile>
+    <ClCompile Include="FEARBallItem.cpp">
+      <Filter>Items</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
@@ -357,6 +360,9 @@
       <Filter>Projectiles</Filter>
     </ClInclude>
     <ClInclude Include="FreezeBallItem.h">
+      <Filter>Items</Filter>
+    </ClInclude>
+    <ClInclude Include="FEARBallItem.h">
       <Filter>Items</Filter>
     </ClInclude>
   </ItemGroup>
