Energy received when hitted item implemented

--- a/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
+++ b/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
@@ -184,6 +184,9 @@
     <ClCompile Include="LifeStealItem.cpp">
       <Filter>Items</Filter>
     </ClCompile>
+    <ClCompile Include="EnergyItem.cpp">
+      <Filter>Items</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
@@ -389,6 +392,9 @@
     <ClInclude Include="LifeStealItem.h">
       <Filter>Items</Filter>
     </ClInclude>
+    <ClInclude Include="EnergyItem.h">
+      <Filter>Items</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Xml Include="..\Game\config.xml" />
@@ -427,8 +433,5 @@
     <Filter Include="Entities\Dynamic Entites\Player">
       <UniqueIdentifier>{9580dc2a-cfc5-4c2d-a9f0-d70f90e119e4}</UniqueIdentifier>
     </Filter>
-  </ItemGroup>
-  <ItemGroup>
-    <ResourceCompile Include="resource.rc" />
   </ItemGroup>
 </Project>
