--- a/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj
+++ b/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="Geyser.cpp" />
     <ClCompile Include="GUIImage.cpp" />
     <ClCompile Include="Guldan.cpp" />
+    <ClCompile Include="HolyShitItem.cpp" />
     <ClCompile Include="InputBox.cpp" />
     <ClCompile Include="ItemContainer.cpp" />
     <ClCompile Include="LifeStealItem.cpp" />
@@ -221,6 +222,7 @@
     <ClInclude Include="GUIElem.h" />
     <ClInclude Include="GUIImage.h" />
     <ClInclude Include="Guldan.h" />
+    <ClInclude Include="HolyShitItem.h" />
     <ClInclude Include="InputBox.h" />
     <ClInclude Include="Item.h" />
     <ClInclude Include="ItemContainer.h" />
