--- a/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
+++ b/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time/Warcraft Heroes Beyond Time.vcxproj.filters
@@ -190,6 +190,9 @@
     <ClCompile Include="HolyShitItem.cpp">
       <Filter>Items</Filter>
     </ClCompile>
+    <ClCompile Include="ShieldBallItem.cpp">
+      <Filter>Items</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
@@ -399,6 +402,9 @@
       <Filter>Items</Filter>
     </ClInclude>
     <ClInclude Include="HolyShitItem.h">
+      <Filter>Items</Filter>
+    </ClInclude>
+    <ClInclude Include="ShieldBallItem.h">
       <Filter>Items</Filter>
     </ClInclude>
   </ItemGroup>
